--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.gif" type="image/gif" /> -->
-    <link rel="icon" href="images/favicon.ico" />
+    <!-- <link rel="icon" href="images/favicon.ico" /> -->
     <link rel="icon" href="images/favicon.gif" type="image/gif" >
 
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
